[package]
name = "srt-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
tokio-stream = "0.1.15"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
flate2 = "1.0.28"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
mpeg2 = { git = "https://github.com/wavey-ai/av-rs.git" }
srt-tokio = "0.4.4"
discovery = { git = "https://github.com/wavey-ai/discovery.git" }
ts = { git = "https://github.com/wavey-ai/ts.git" }
access-unit = { git = "https://github.com/wavey-ai/access-unit.git" }
sonyflake = "0.2.0"
tls-helpers = "0.1.3"
rustls = { version = "0.21.0" }
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
rtrb = "0.3.1"
tracing-subscriber = "0.3.18"
