[package]
name = "srt-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
access-unit = { git = "https://github.com/wavey-ai/access-unit.git" }
base64 = "0.22.1"
bytes = "1.6.0"
discovery = { git = "https://github.com/wavey-ai/discovery.git" }
flate2 = "1.0.28"
futures = "0.3.30"
gen-id = { git = "https://github.com/wavey-ai/gen-id.git" }
hmac = "0.12.1"
mpeg2 = { git = "https://github.com/wavey-ai/av-rs.git" }
rtrb = "0.3.1"
rustls = { version = "0.21.0" }
sha2 = "0.10.8"
srt-tokio = "0.4.4"
storage = { git = "https://github.com/wavey-ai/storage.git" }
tls-helpers = "0.1.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ts = { git = "https://github.com/wavey-ai/ts.git" }
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
